[#6] 매물 등록 페이지 백단으로 값 넘기기 구현 완료

--- a/CustomizedHouse/src/main/resources/templates/rea/reaMain.html
+++ b/CustomizedHouse/src/main/resources/templates/rea/reaMain.html
@@ -3,7 +3,7 @@
       layout:decorator="~{indexLayout}"
 >
 <head>
-	<style type="text/css">
+	<style type="text/css" layout:fragment="pageCss">
 		a {
 		    color: #797979;
 		}
