--- a/CustomizedHouse/src/main/resources/templates/fragments/footer.html
+++ b/CustomizedHouse/src/main/resources/templates/fragments/footer.html
@@ -26,4 +26,7 @@
     <script th:src="@{//code.jquery.com/ui/1.12.1/jquery-ui.js}"></script>
     <script th:src="@{/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js}"></script>
 
+    <script>
+
+    </script>
 </div>
