[#6] 매물 등록중

--- a/CustomizedHouse/src/main/resources/templates/rea/saleAddPage.html
+++ b/CustomizedHouse/src/main/resources/templates/rea/saleAddPage.html
@@ -147,7 +147,7 @@
 								<textarea cols="70" rows="3" placeholder="매물에 관한 부가적인 내용" name="etc"></textarea>
 							</p>
 						</div>
-						<input type="hidden" name="isContract" value="무">
+						<input type="hidden" name="isContract" value="0">
 						<br>
 						<br>
 						<div class="form-group">
