[#9] 회원정보수정 완료

--- a/CustomizedHouse/src/main/resources/templates/generic/genericEditSuccess.html
+++ b/CustomizedHouse/src/main/resources/templates/generic/genericEditSuccess.html
@@ -34,10 +34,10 @@ text-align: center;
 									<div class="form-group">
 								<div class="row">
 								<div class="col-sm-6">
-						            <button type="submit" class="btn btn-primary btn-block btn-lg" onclick="location.href='GetUserMainPageService.d4b?type=U01'">메인페이지로 이동</button>
+						            <button type="submit" class="btn btn-primary btn-block btn-lg" onclick="location.href='/'">메인페이지로 이동</button>
 						        </div>
 						        <div class="col-sm-6">
-						        	 <button type="submit" class="btn btn-primary btn-block btn-lg" onclick="location.href='GetGenericUserMypageMainService.d4b?type=U01'">마이페이지로 이동</button>
+						        	 <button type="submit" class="btn btn-primary btn-block btn-lg" onclick="location.href='/generic/genericMyPage'">마이페이지로 이동</button>
 						        </div>	
 						        </div> 
 						        </div>
