--- a/CustomizedHouse/src/main/resources/templates/generic/genericUserEdit.html
+++ b/CustomizedHouse/src/main/resources/templates/generic/genericUserEdit.html
@@ -34,6 +34,16 @@
 											id="userName" required="required" th:value="${genericUser.name}">
 									</div>
 									<div class="form-group">
+										<label>주민등록번호 &nbsp;&nbsp;&nbsp;&nbsp;<span id="tdId"></span></label>
+										<div class="row">&nbsp;&nbsp;&nbsp;&nbsp;
+											<input type="text" class="form-control" name="birth" id="birth"
+												    required="required" style="width:41%;" th:value="${generic.birth}">
+		                                    &nbsp;&nbsp;&nbsp;&nbsp;-
+		                                    <input type="password" class="form-control" name="resNum" id="resNum"  
+		                                    		required="required" style="width:41%;" th:value="${generic.resNum}">
+										</div>
+									</div>
+									<div class="form-group">
 		                                <label>이메일 &nbsp;&nbsp;&nbsp;&nbsp;<span id="tdEmail"></span></label>
 		                                <input type="text" class="form-control" name="userEmail"
 		                                       id="userEmail" required="required" th:value="${genericUser.userMail}">
