[#7] 공인중개사 회원가입 완료, 이미지 업로드 중

--- a/CustomizedHouse/src/main/resources/templates/index.html
+++ b/CustomizedHouse/src/main/resources/templates/index.html
@@ -99,7 +99,7 @@
         var middleBigData = []; //중대형
         var bigData = []; //대형
         $.ajax({
-            url: "http://localhost:8000/ajax/chart1",
+            url: "http://localhost:8000/chart1",
             type: "POST",
             dataType: "text",
             success : function(data) {
