--- a/CustomizedHouse/src/main/resources/templates/rea/reaSalePage.html
+++ b/CustomizedHouse/src/main/resources/templates/rea/reaSalePage.html
@@ -98,7 +98,7 @@
 		                        &nbsp;
 		                        <button type="button" class="btn-group" onclick="location.href='GetREAScheduleListByIdService.d4b?userId=${reaUserData.reaId}'">일정 관리</button>
 		                        &nbsp;
-		                        <button type="button" class="btn-group" onclick="location.href='GetREAMypageEditService.d4b'">정보 수정</button>
+		                        <button type="button" class="btn-group" onclick="location.href='/rea/reaEditPage'">정보 수정</button>
 		                        <input type="hidden" value="<%=userId %>" id="reaId">
 		                        <br> <br>
 		                        <div id="saleList">
