[#6] 공인중개사 정보수정 ing

--- a/CustomizedHouse/src/main/resources/templates/rea/reaEditPage.html
+++ b/CustomizedHouse/src/main/resources/templates/rea/reaEditPage.html
@@ -3,7 +3,9 @@
       layout:decorator="~{indexLayout}">
 <head>
 <style type="text/css" layout:fragment="pageCss">
-
+h2 {
+	font-family: 'Jua', sans-serif;
+}
 </style>
 </head>
 <section id="reaEditPage" class="about roomy-100" layout:fragment="content">
@@ -14,7 +16,6 @@
 							<div class="col-md-3"></div>
 							<div class="col-md-6">
 								<div class="signup-form">
-
 							<br> <br> <br>
 							<h2 style="text-align: center">공인중개사회원 정보수정</h2>
 							<br>
@@ -91,7 +92,7 @@
 											</div>
 											<div class="col-sm-6">
 												<button type="reset"
-													class="btn btn-primary btn-block btn-lg">취소</button>
+													class="btn btn-primary btn-block btn-lg" onclick="location.href='/rea/reaSale'">취소</button>
 											</div>
 										</div>
 									</div>
