[#6] 공인중개사 일정관리 페이지 이동

--- a/CustomizedHouse/src/main/resources/templates/rea/reaSalePage.html
+++ b/CustomizedHouse/src/main/resources/templates/rea/reaSalePage.html
@@ -96,7 +96,7 @@
 		                        &nbsp;
 		                        <button type="button" class="btn-group" onclick="location.href='CheckIntroBoardService.d4b'">소개글 관리</button>
 		                        &nbsp;
-		                        <button type="button" class="btn-group" onclick="location.href='GetREAScheduleListByIdService.d4b?userId=${reaUserData.reaId}'">일정 관리</button>
+		                        <button type="button" class="btn-group" onclick="location.href='/rea/reaSchedulePage'">일정 관리</button>
 		                        &nbsp;
 		                        <button type="button" class="btn-group" onclick="location.href='/rea/reaEditPage'">정보 수정</button>
 		                        <input type="hidden" value="<%=userId %>" id="reaId">
